# Birthmark

./: .gitignore  ARCHITECTURE_CHANGE_NO_BATCHING.md  CAMERA_PI_COMPATIBILITY.md  CLAUDE.md  DEMO_PHASE1.md  LICENSE  LICENSING.md  ORGANIZATION_PROFILE_README.md  PHASE1_STARTUP_CHECKLIST.md  PHASE_1_BLOCKCHAIN_READY.md  PHASE_1_TEST_REPORT.md  PI_CAMERA_INTEGRATION_PLAN.md  RASPBERRY_PI_UPDATE.md  README.md  SMA_CODE_REVIEW.md  SPDX_LICENSING_SUMMARY.md  VERIFICATION_GUIDE.md  WEEK_1_2_VALIDATION_REPORT.md  WEEK_3_INTEGRATION_TESTING_GUIDE.md  WEEK_3_SUMMARY.md  add_spdx_headers.py  check_blockchain.py  check_pi_images.ps1  get_pi_hash.ps1  index.html  status.ps1  test_variance_validation_standalone.py  verify_hash.py  verify_submission.ps1  verify_submission_simple.ps1
.github/: CODEOWNERS
.github/workflows/: hugo-build.yml
docs/: CLAUDE.md  CNAME  LICENSE  OPTIMIZATION_QUICK_REFERENCE.md  OPTIMIZATION_RESULTS.md  OWNER_ATTRIBUTION.md  PHASE_1_DEPLOYMENT_GUIDE.md  PHASE_2_PLANNING.md  PRIVACY_FAQ.md  SECURITY_IMPROVEMENT_MA_ID_REMOVAL.md  STORAGE_OPTIMIZATION.md  contact.html  governance.html  index.html  investigation-framework.html  privacy-design.html  styles.css  technical-architecture.html  verify.html
docs/admin/: index.html
docs/architecture/: ANDROID_APP_PIPELINE.md  CERTIFICATE_MIGRATION_GUIDE.md  IOS_APP_PIPELINE.md  IOS_RELEASE_READINESS_ASSESSMENT.md  PHASE_2_ARCHITECTURE_UPDATES.md  PHASE_2_IOS_ERRORS_REPORT.md
docs/assets/: README.md
docs/blog/: index.html
docs/org/: Birthmark Media Registry Governance Charter.docx  Birthmark Standard Technical Architecture.docx  The Birthmark Standard v1.0.docx
docs/phase-plans/: Birthmark_Phase_1-2_Plan_SMA.md  (+7 more)
gimp-plugin/: birthmark_gimp_plugin.py  install.md  user_guide.md
scripts/: demo_phase1_pipeline.py  deploy_testnet.sh  integration_test.sh  provision_device.sh
shared/: LICENSE  README.md  __init__.py  pyproject.toml
shared/certificates/: README.md  __init__.py  builder.py  oids.py  parser.py  validator.py
shared/crypto/: README.md  __init__.py  encryption.py  hashing.py  key_derivation.py
shared/protocols/: README.md
shared/types/: README.md  __init__.py  merkle.py  submission.py  validation.py
website/: hugo.toml
(+31 files in other folders)
